<resources>
    <string name="app_name">MyMaterialDesign</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="photo_of_the_day_stub">s</string>
    <string name="day_before_yesterday">Day before yesterday</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="favourite">Likes</string>
    <string name="settings">Setting</string>
    <string name="lemon_style">Lemon Style</string>
    <string name="orange_style">Orange Style</string>
    <string name="select_your_color_style">Select your color style:</string>
    <string name="select_your_font_style">Select your font style</string>
    <string name="roboto_style">Roboto Style</string>
    <string name="felipa_style">Felipa Style</string>
    <string name="earth_tab_text">Earth</string>
    <string name="mars_tab_text">Mars</string>
    <string name="system_tab_text">System</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="weather">Weather</string>
    <string name="pictures_of_the_day">Pictures of the day</string>
    <string name="viewpager">VieWPager</string>
    <string name="settingg">Setting</string>
    <string name="descriptionLessonFour">По переключению свича реализована изменение параметра видимости группы элементов (применены навыки работы с группаи). По нажатию на кнопку Motion, будут продемонстрированы возможности Motion Layout. В данном фрагменте так же использованы возможности ConstrainLayout такие как: барьер, вес элемента выроженный через % и прочие</string>
    <string name="visiblyGruop">Видимость группы элементов</string>
    <string name="motions">Motions</string>
    <string name="motion2">Motion2</string>
    <string name="recycler">Recycler</string>
    <string name="description_text_mars">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>

</resources>