<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/TVStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/select_your_color_style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupStyle"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TVStyle">

        <RadioButton
            android:id="@+id/RBLimeStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lemon_style"/>
        <RadioButton
            android:id="@+id/RBOrangeStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/orange_style"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>